# FastAPI-Project

./: README.md
Hello-world/: pyproject.toml
Hello-world/hello_world/: main.py
assignment-01/: pyproject.toml
assignment-01/assignment_01/: main.py
assignment_02/: pyproject.toml
assignment_02/assignment_02/: main.py
assignment_02/assignment_02/models/: todos.py
