[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = ""
authors = ["Muhammad Luqman Asghar <luqmanposwal786@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[tool.poetry.scripts]
dev="hello_world.main:start"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
