[tool.poetry]
name = "assignment-02"
version = "0.1.0"
description = ""
authors = ["Muhammad Luqman Asghar <luqmanposwal786@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlmodel = "^0.0.18"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"
mypy = "^1.10.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
[tool.poetry.scripts]
dev= "assignment_02.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
